Changes over text and Console log sign up data.

--- a/signup.html
+++ b/signup.html
@@ -81,26 +81,26 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="public/css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body class="text-center">
     
     <main class="form-signin w-100 m-auto">
-      <form>
-        <img class="mb-4" src="public/img/gurenn-logo.svg" alt="" width="72" height="57">
+      <form action="/" method="POST">
+        <img class="mb-4" src="img/gurenn-logo.svg" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Sign up to our Newsletter</h1>
 
         <div class="form-floating">
-          <input type="text" class="form-control top" placeholder="name@example.com">
+          <input type="text" name="fName" class="form-control top" placeholder="name@example.com">
           <label for="floatingInput">First Name</label>
         </div>
         <div class="form-floating">
-          <input type="text" class="form-control middle" placeholder="name@example.com">
+          <input type="text" name="lName" class="form-control middle" placeholder="name@example.com">
           <label for="floatingInput">Last Name</label>
         </div>
         <div class="form-floating">
-          <input type="email" class="form-control bottom" placeholder="Password">
-          <label for="floatingPassword">Email</label>
+          <input type="email" name="emailAddress" class="form-control bottom" placeholder="Password">
+          <label for="floatingPassword">Email Address</label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign me up</button>
         <p class="mt-5 mb-3 text-muted">&copy; Gurenn - 2022</p>
